[project]
name = "zachakit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zsbyqx20", email = "112002598+Zsbyqx20@users.noreply.github.com"},
]
dependencies = ["openai>=1.54.0", "tiktoken>=0.8.0", "socksio>=1.0.0", "python-dotenv>=1.0.1", "structlog>=24.4.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "semversioner>=2.0.5",
    "ipykernel>=6.29.5",
    "ruff>=0.7.2",
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "coverage>=7.6.4",
    "update-toml>=0.2.1",
    "mkdocstrings-python>=1.12.2",
    "mkdocs-material>=9.5.43",
    "mkdocs>=1.6.1",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
_ruff_check_format = "ruff format . --check --preview"
_ruff_check = "ruff check . --preview"
_pyright = "pyright"
_ruff_sort_imports = "ruff check --select I --fix . --preview"
_ruff_format_code = "ruff format . --preview"
_semversioner_release = "semversioner release"
_semversioner_changelog = { shell = "semversioner changelog > CHANGELOG.md" }
_semversioner_update_toml_version = { shell = "update-toml update --path tool.poetry.version --value $(poetry run semversioner current-version)" }
coverage_report = 'coverage report --omit "**/tests/**" --show-missing'
_test_all = "coverage run -m pytest ./tests"

fix = "ruff check --fix . --preview"
format = {composite = ['_ruff_sort_imports', '_ruff_format_code']}
check = {composite = ['_ruff_check_format', '_ruff_check', '_pyright']}
release = {composite = ['_semversioner_release', '_semversioner_changelog', '_semversioner_update_toml_version']}
test = {composite = ['_test_all', 'coverage_report']}
